--- a/src/app/product-detail/product-detail.component.html
+++ b/src/app/product-detail/product-detail.component.html
@@ -97,7 +97,7 @@
         </div>
     </div>
     <div className="mt-24">
-        <vsf-top-reviews></vsf-top-reviews>
+        <!--<vsf-top-reviews></vsf-top-reviews>-->
     </div>
 </div>
 
