--- a/src/app/checkout/components/checkout-payment/checkout-payment.component.html
+++ b/src/app/checkout/components/checkout-payment/checkout-payment.component.html
@@ -3,10 +3,10 @@
 </div>
 <ng-container *ngFor="let paymentMethod of paymentMethods$ | async">
     <h4 class="font-medium">Pay with method "{{ paymentMethod.code }}"</h4>
-    <div class="alert alert-info my-4" role="alert">
+ <!--   <div class="alert alert-info my-4" role="alert">
         This is an example payment form. Do not use real card details!
-    </div>
-    <form class="border bg-white rounded p-4 max-w-sm" #paymentForm="ngForm" (submit)="completeOrder(paymentMethod.code)">
+    </div>-->
+    <!--<form class="border bg-white rounded p-4 max-w-sm" #paymentForm="ngForm" (submit)="completeOrder(paymentMethod.code)">
         <div class="flex items-center space-x-2">
             <div class="w-16 text-gray-600">
                 <fa-icon icon="credit-card"></fa-icon>
@@ -42,5 +42,30 @@
         <button class="btn-primary w-full mt-6"
                 [disabled]="paymentForm.pristine || paymentForm.invalid">Complete order
         </button>
-    </form>
+    </form>-->
+
+
+  <!--  <ngx-stripe-card
+        [options]="cardOptions"
+        [elementsOptions]="elementsOptions"
+    ></ngx-stripe-card>
+    <ngx-stripe-p24-bank
+        [elementsOptions]="elementsOptions"
+    ></ngx-stripe-p24-bank>
+
+    <ngx-stripe-elements></ngx-stripe-elements>-->
+
+    <ng-container *ngIf="elementsOptions?.clientSecret as clientSecret">
+<!--        <ngx-stripe-payment [clientSecret]="clientSecret">
+        </ngx-stripe-payment>-->
+
+        <ngx-stripe-elements
+        [elementsOptions]="elementsOptions"
+        ></ngx-stripe-elements>
+    </ng-container>
+
+    <button (click)="console.log($event)">xxx</button>
+
+    <!--<button (click)="pay()">Pay</button>-->
+
 </ng-container>
