--- a/src/app/checkout/components/checkout-payment/checkout-payment.component.html
+++ b/src/app/checkout/components/checkout-payment/checkout-payment.component.html
@@ -10,7 +10,9 @@
         <div id="payment-element">
             <!-- Elements will create form elements here -->
         </div>
-        <button>Pay now</button>
+        <button
+            *ngIf="elements"
+            class="btn-primary my-2">Pay now</button>
         <div id="error-message">
             <!-- Display error message to your customers here -->
         </div>
