--- a/src/app/account/components/account-address-book/account-address-book.component.html
+++ b/src/app/account/components/account-address-book/account-address-book.component.html
@@ -1,3 +1,10 @@
+<header class="p-2 my-2">
+    <button (click)="openAddNewAddressDialog()"
+            type="button"
+            class="btn btn-primary">
+        Add new
+    </button>
+</header>
 <div class="flex flex-wrap space-x-6">
     <vsf-address-card *ngFor="let address of addresses$ | async"
                       [address]="address"
