--- a/src/app/shared/components/modal-dialog/modal-dialog.component.scss
+++ b/src/app/shared/components/modal-dialog/modal-dialog.component.scss
@@ -1,7 +1,8 @@
 @import "src/styles/variables";
 
 :host {
-    display: block;
+    display: flex;
+    align-items: center;
     animation: fadeIn 0.3s ease-out forwards;
 }
 
