--- a/src/app/shared/components/modal-dialog/modal-dialog.component.html
+++ b/src/app/shared/components/modal-dialog/modal-dialog.component.html
@@ -1,21 +1,28 @@
-<div class="modal-content">
-    <div class="modal-header">
-        <h5 class="modal-title"><ng-container *ngTemplateOutlet="(titleTemplateRef$ | async)"></ng-container></h5>
-        <button *ngIf="options?.closable" type="button"
+<div class="modal-content flex flex-col h-5/6 md:h-full bg-white rounded-lg shadow dark:bg-gray-700">
+    <header class="modal-header flex items-start justify-between p-4 border-b rounded-t dark:border-gray-600">
+        <h5 class="modal-title text-xl font-semibold text-gray-900 dark:text-white"
+            *ngIf="(titleTemplateRef$ | async) as titleTemplate"
+        >
+            <ng-container *ngTemplateOutlet="titleTemplate"></ng-container>
+        </h5>
+        <button *ngIf="options?.closable"
                 (click)="closeModal()"
-                class="close"
+                type="button"
                 data-dismiss="modal"
-                aria-label="Close">
-            <span aria-hidden="true">&times;</span>
+                aria-label="Close"
+                class="text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm p-1.5 ml-auto inline-flex items-center dark:hover:bg-gray-600 dark:hover:text-white" data-modal-hide="defaultModal">
+            <svg aria-hidden="true" class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
+            <span class="sr-only">Close modal</span>
         </button>
-    </div>
-    <div class="modal-body">
-        <vsf-dialog-component-outlet
-            [component]="childComponentType"
-            (create)="onCreate($event)"
-        ></vsf-dialog-component-outlet>
-    </div>
-    <div class="modal-footer">
-        <ng-container *ngTemplateOutlet="(buttonsTemplateRef$ | async)"></ng-container>
-    </div>
+    </header>
+    <main class="modal-body p-6 space-y-6  overflow-y-auto">
+             <vsf-dialog-component-outlet
+                 [component]="childComponentType"
+                 (create)="onCreate($event)"
+             ></vsf-dialog-component-outlet>
+    </main>
+    <footer class="modal-footer flex items-center p-6 space-x-2 border-t border-gray-200 rounded-b dark:border-gray-600"
+         *ngIf="(buttonsTemplateRef$ | async) as buttonsTemplate">
+        <ng-container *ngTemplateOutlet="buttonsTemplate"></ng-container>
+    </footer>
 </div>
