ssr protected routes

--- a/src/app/shared/components/account-link/account-link.component.scss
+++ b/src/app/shared/components/account-link/account-link.component.scss
@@ -8,3 +8,22 @@ a.btn {
         background-color: $light;
     }
 }
+
+:host::ng-deep fa-icon{
+
+    svg{
+        display: inline-block;
+        height: 1em;
+    }
+
+    .svg-inline--fa {
+        display: var(--fa-display, inline-block);
+        height: 1em;
+        overflow: visible;
+        vertical-align: -0.125em;
+    }
+    svg:not(:root).svg-inline--fa, svg:not(:host).svg-inline--fa {
+        overflow: visible;
+        box-sizing: content-box;
+    }
+}
