some account/sign-in flow fixes

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -12,3 +12,10 @@
         @apply block w-full appearance-none rounded-md border border-gray-300 px-3 py-2 placeholder-gray-400 shadow-sm focus:border-primary-500 focus:outline-none focus:ring-primary-500 sm:text-sm;
     }
 }
+
+fa-icon svg {
+    display: inline-block;
+    font-size: inherit;
+    height: 1em;
+    vertical-align: -0.125em;
+}
