--- a/src/app/checkout/components/checkout-shipping/checkout-shipping.component.html
+++ b/src/app/checkout/components/checkout-shipping/checkout-shipping.component.html
@@ -4,16 +4,20 @@
     </div>
     <div class="">
         <div class="d-flex flex-wrap">
-            <div class="customer-address"
-                 *ngFor="let address of customerAddresses$ | async"
-                 (click)="setShippingAddress(address)">
-                <div class="address-line" *ngFor="let line of getLines(address)">
-                    {{ line }}
+            <vsf-radio-card-fieldset
+                [idFn]="getId"
+                [selectedItemId]="shippingMethodId"
+                (selectItem)="setShippingAddress($event)"
+            >
+                <div class="mt-4 grid grid-cols-1 gap-y-6 sm:grid-cols-2 sm:gap-x-4">
+                    <vsf-radio-card *ngFor="let address of customerAddresses$ | async" [item]="address">
+                        <vsf-address-card
+                            [address]="address"
+                            class="w-64">
+                        </vsf-address-card>
+                    </vsf-radio-card>
                 </div>
-            </div>
-            <div class="d-flex align-items-end ml-3 mb-3">
-                <button class="btn btn-secondary" (click)="createAddress()">Add new address</button>
-            </div>
+            </vsf-radio-card-fieldset>
         </div>
     </div>
 </div>
@@ -35,7 +39,7 @@
                     id="emailAddress"
                     name="emailAddress"
                     autoComplete="email"
-                   formControlName="emailAddress"
+                    formControlName="emailAddress"
                     class="block w-full border-gray-300 rounded-md shadow-sm focus:ring-primary-500 focus:border-primary-500 sm:text-sm"
                 />
             </div>
@@ -114,6 +118,7 @@
         </div>
     </vsf-radio-card-fieldset>
 </div>
+
 <button class="btn-primary mt-6 w-full space-x-2"
         [disabled]="!shippingMethodId || addressForm.invalid"
         (click)="proceedToPayment()">
