ssry nie wiem co

--- a/src/app/checkout/components/checkout-process/checkout-process.component.html
+++ b/src/app/checkout/components/checkout-process/checkout-process.component.html
@@ -9,6 +9,11 @@
                 <router-outlet></router-outlet>
             </div>
             <div class="summary" *ngIf="cart$ | async as cart">
+                <vsf-order-change-to-status
+                    *ngIf="cart.state !== addingItemsOrderState"
+                    [showLinkToCheckout]="false"
+                ></vsf-order-change-to-status>
+
                 <vsf-cart-contents [cart]="cart" class="mb-3"></vsf-cart-contents>
                 <vsf-cart-totals [cart]="cart"></vsf-cart-totals>
                 <vsf-address-card *ngIf="cart.shippingAddress?.streetLine1"
